added images updated css port

--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
             <h2>Porfolio</h2>
             <div class="container">
                 <div class="card">
-                    <img src="assets/images/proj1.jpg" alt="My Image"class="Proj1"/>  
+                    <h2> Project#1:</h2> <p> This was our very first project completed. We created a music/drink app to entertainment</p>
+                    <img src="assets/images/proj1.jpg" alt="My Image"class="Proj1"/> 
+                    <h2> Project#2:</h2> <p> was our second project complete. This app was created for communication purposes to the user, anonymous posts in my area and the option to create or login to a social account.</p>
+                    <img src="assets/images/P-2sample.png" alt="My Image"class="P-2sample"/>
+                    <h2> Posting Page</h2>
+                    <img src="assets/images/img2.png" alt="My Image"class="img2"/> 
+                    <h2> Login Page for User</h2>
+                    <img src="assets/images/img3.png" alt="My Image"class="img3"/> 
+
                 <div>
                         <a href="https://babylex710.github.io/Rhythm-and-booze/"><button class="site">Site</button></a>
                         <a href="https://github.com/GithubOchoa1/Challenge2"><button  class="code">Code</button></a>
